# ping

./: CMakeLists.txt  build-mingw64-x86.sh  build-mingw64.sh
src/: cping.h  cping.manifest  cping.rc  ping.c
